--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "assets/js/leaflet/plugins/storage"]
-	path = assets/js/leaflet/plugins/storage
-	url = https://github.com/yohanboniface/Leaflet.Storage.git
 [submodule "assets/js/shorty"]
 	path = assets/js/shorty
 	url = git@github.com:gabrielnahmias/jquery-shorty.git
@@ -10,3 +7,9 @@
 [submodule "assets/cls/Browser"]
 	path = assets/cls/Browser
 	url = git@github.com:gabrielnahmias/Browser.php.git
+[submodule "assets/js/leaflet"]
+	path = assets/js/leaflet
+	url = https://github.com/Leaflet/Leaflet.git
+[submodule "assets/js/leaflet/plugins/store"]
+	path = assets/js/leaflet/plugins/store
+	url = https://github.com/yohanboniface/Leaflet.Storage.git
